- Improved layout issues - Entity expansion completed - More checks about command execution - RVT-logging of RWA-launched commands

--- a/trunk/RWA/css/rwa.css
+++ b/trunk/RWA/css/rwa.css
@@ -120,7 +120,9 @@ div.err
 
 div#commands
 {
-	margin: 5px;
+	padding: 5px;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 label.command
 {
